--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.81"
-pest = "2.7.8"
-pest_derive = "2.7.8"
+nom = "7.1.3"
 
-[[bin]]
-name = "csv"
-path = "src/csv.rs"
